Fixed start button alignment in mobile view

--- a/style.css
+++ b/style.css
@@ -1568,6 +1568,10 @@ MOBILE RESPONSIVENESS ↓
     padding: 80px 0;
   }
 
+.start__button:nth-child(1) {
+  margin-right: 0;
+}
+
   .nav__logo {
     margin: 8px 0;
     padding-bottom: 4px;
